--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-particles": "^2.12.2",
+    "tsparticles": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
