--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "^1.0.2",
     "lucide-react": "^0.284.0",
     "next": "13.5.4",
+    "next-intl": "3.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
