--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-particles": "^2.12.2",
+    "tailwind-variants": "^0.1.14",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
