--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@vercel/analytics": "^1.4.1",
     "lucide-react": "^0.464.0",
     "next": "15.0.3",
     "next-intl": "3.25.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-particles": "^2.12.2",
-    "tailwind-variants": "^0.1.20",
-    "tsparticles": "^2.12.0"
+    "tailwind-variants": "^0.1.20"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
