--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-intl": "3.25.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.4.0",
     "tailwind-variants": "^0.1.20"
   },
   "devDependencies": {
